2017.09.11 Kentaro Fukuchi <kentaro@fukuchi.org>
	* qrenc.c:
	  - Read buffer is now allocated as a static array to avoid malloc().
	    Suppresses memory leak warnings. (Thanks to @c-273)
	* README.md:
	  - INSTALL and ACKNOWLEDGMENTS sections are updated.
	* makeREADME.sh:
	  - Now it removes the attention line for github.com users.

2017.09.07 Kentaro Fukuchi <kentaro@fukuchi.org>
	* *.[ch]:
	  - Copyright year updated for the next major update.
	* tests/test_configure.sh:
	  - Added some progress messages.
	* tests/test_all.sh:
	  - Added test_configure.sh to the list.
	* Makefile.am, tests/Makefile.am:
	  - Added some EXTRA_DIST files.
	  - Moved some EXTRA_DIST files from Makefile.am to tests/Makefile.am.
	* makeREADME.sh:
	  - Newly added.
	* configure.ac, CMakeLists.txt, README, README.md:
	  - Bumped version to 4.0.0, preparing for major update.
	* .travis.yml:
	  - Configuration improved.
	* Makefile.am, README:
	  - Added a new rule to generate README from README.md.
	  - README is no longer needed in the source tree.
	* .gitignore:
	  - Added 'CTestTestfile.cmake'.
	  - Added 'README'
	* README.md:
	  - Added Katsumi Saito, the contributor of SPEC file, has been added to
	    the section of ACKNOWLEDGMENTS. We apologize for this lack of
		acknowledgment.

2017.09.06 Kentaro Fukuchi <kentaro@fukuchi.org>
	* mqrspec.h:
	  - Documentation update.
	* qrencode.[ch]:
	  - QRcode_clearCache() has been defined as a deprecated function for
	    backward compatibility.
	* qrenc.c:
	  - Copyright year updated.
	* NEWS, README, README.md:
	  - Documentation update.
	* use/config.rpath:
	  - Updated to the newer version bundled with gettext-0.19.8.1.
	* qrencode.1.in:
	  - Copyright year updated.

2017.09.02 Kentaro Fukuchi <kentaro@fukuchi.org>
	* configure.ac:
	  - Replaced AC_PROG_RANLIB with LT_INIT.

2017.08.04 Kentaro Fukuchi <kentaro@fukuchi.org>
	* CMakeLists.txt:
	  - Getopt.h is checked only by WITH_TOOLS. (merged #101) (Thanks to
	    @KangLin)